--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20230419.0",
+    "@types/he": "^1.2.1",
     "typescript": "^5.0.4",
     "wrangler": "^3.0.0"
+  },
+  "dependencies": {
+    "he": "^1.2.0"
   }
 }
