--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@cloudflare/puppeteer": "^0.0.5",
     "@cloudflare/workers-types": "^4.20230419.0",
     "@types/he": "^1.2.1",
+    "@types/node": "^20.14.6",
     "typescript": "^5.0.4",
     "wrangler": "^3.30.1"
   },
